# file_utilities_lightweight

./: LICENSE  README.md  __init__.py  dict_utils.py  json_utils.py  logging_utils.py  pyproject.toml  setup.cfg  xlsx_utils.py
.github/workflows/: python-publish.yml
